plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.selenium'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    
    // Selenium dependencies
    implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
    implementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.15.0'
    implementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.15.0'
    
    // WebDriverManager for automatic driver management
    implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
    
    // JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Support for Java 21
tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
